fix z-index for services dropdown

--- a/assets/scss/layout/_main-menu.scss
+++ b/assets/scss/layout/_main-menu.scss
@@ -56,6 +56,7 @@
   .dropdown {
     &:hover .dropdown-menu {
       display: block;
+      z-index: 1;
     }
   }
 }
